--- a/makefile/review/make-p/makefile
+++ b/makefile/review/make-p/makefile
@@ -14,6 +14,14 @@ LDFLAGS = -DLDFLAGS
 LOADLIBES = -DLOADLIBES
 LDLIBS = -DLDLIBS
 
+all: release
+
+debug: CPPFLAGS += -DDEBUG
+debug: $(EXECUTABLE)
+
+release: CPPFLAGS += -DRELEASE
+release: $(EXECUTABLE)
+
 $(EXECUTABLE): $(OBJECTS)
 	$(LINK.cc) -o $@ $(OBJECTS) $(LOADLIBES) $(LDLIBS)
 
