--- a/makefile/review/make-p/makefile
+++ b/makefile/review/make-p/makefile
@@ -1,4 +1,5 @@
-SOURCES = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp) $(wildcard *.cxx)
+SOURCES += $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp) $(wildcard *.cxx)
+SOURCES += $(wildcard */*.c) $(wildcard */*.cc) $(wildcard */*.cpp) $(wildcard */*.cxx)
 OBJECTS = $(addsuffix .o,$(basename $(SOURCES)))
 TARGET = $(shell basename $(PWD))
 
@@ -33,4 +34,5 @@ list:
 
 clean:
 	rm -rf *.o
+	rm -rf */*.o
 	rm -rf $(TARGET)
