--- a/makefile/simple/makefile
+++ b/makefile/simple/makefile
@@ -1,6 +1,9 @@
 SOURCES = $(wildcard *.cpp)
 OBJECTS = $(addsuffix .o,$(basename $(SOURCES)))
 TARGET  = $(shell basename $(PWD))
+
+#CPPFLAGS
+#LDLIBS
  
 first: all
 
@@ -8,7 +11,13 @@ all: $(TARGET)
  
 $(TARGET): $(OBJECTS)
 	$(LINK.cc) -o $@ $(OBJECTS) $(LOADLIBES) $(LDLIBS)
- 
+
+show:
+	@echo "TARGET="$(TARGET)
+	@echo "OBJECTS="$(OBJECTS)
+
 clean:
-	rm -rf *.o
+	rm -rf $(OBJECTS)
 	rm -rf $(TARGET)
+
+.PHONY: show
