Make default makefiles

--- a/makefile/advance/test/makefile
+++ b/makefile/advance/test/makefile
@@ -1,14 +1,5 @@
 # ------------------------------------------------------------------------------
-# makefile
+# test/makefile
 # ------------------------------------------------------------------------------
 
 .PHONY: all debug release build temp depend clean
-
-all:
-	make $(TARGET) -C src
-debug
-release
-build
-temp
-depend
-clean
