Enhance root makefile

--- a/makefile/advance/makefile
+++ b/makefile/advance/makefile
@@ -2,13 +2,26 @@
 # makefile
 # ------------------------------------------------------------------------------
 
-.PHONY: all debug release build temp depend clean
+_SUBDIRS = lib src
+.PHONY: all debug release build clean depend temp $(_SUBDIRS)
 
-all:
-	make $(TARGET) -C src
-debug
-release
-build
-temp
-depend
-clean
+#
+# targets
+#
+all     :
+	@cd lib  && make release && cd ..
+	@cd src  && make release && cd ..
+	@cd test && make debug   && cd ..
+	
+debug   : build
+release : build
+build   : deps_check $(_SUBDIRS)
+clean   : $(_SUBDIRS)
+depend  : deps_check $(_SUBDIRS)
+temp    : $(_SUBDIRS)
+
+deps_check:
+	@echo "deps_check"
+
+$(_SUBDIRS):
+	@cd $@ && make $(MAKECMDGOALS) && cd ..
