--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -2,7 +2,7 @@
 # src/makefile
 # ------------------------------------------------------------------------------
 
-.PHONY: all debug release build temp depend clean
+.PHONY: all debug release build temp depend clean subdirs
 
 #
 # debug and release option
@@ -24,30 +24,28 @@ _EXECUTABLE = $(shell basename $(PWD))
 # targets
 #
 all: release
-
+	@echo "src all"
+	
 debug: build
+	@echo "src debug"
 
 release: build
-
+	@echo "src release"
+	
 build: $(_TARGET)
-	@echo "----- build -----" # gilgil temp
-
-$(_EXECUTABLE): $(_OBJECTS)
-	$(LINK.cc) -o $@ $(_OBJECTS) $(LOADLIBES) $(LDLIBS)
-
-temp:
-	@echo "CPPFLAGS="$(CPPFLAGS)
-	@echo "TARGET="$(TARGET)
+	@echo "src build"
 
 clean:
+	@echo "src clean"
 	rm -rf $(_OBJECTS)
 	rm -rf $(_TARGET)
 
-help:
-	@echo "make all(default)"
-	@echo "make debug"
-	@echo "make release"
-	@echo "make build"
-	@echo "make temp"
-	@echo "make clean"
-	@echo "make help"
+depend:
+
+temp:
+	@echo "src build"
+	@echo "CPPFLAGS="$(CPPFLAGS)
+	@echo "TARGET="$(TARGET)
+
+$(_EXECUTABLE): $(_OBJECTS)
+	$(LINK.cc) -o $@ $(_OBJECTS) $(LOADLIBES) $(LDLIBS)
