--- a/makefile/advance/makefile
+++ b/makefile/advance/makefile
@@ -2,13 +2,13 @@
 # makefile
 # ------------------------------------------------------------------------------
 
-_SUBDIRS = lib src
+_SUBDIRS = lib src test
 .PHONY: all debug release build clean depend temp $(_SUBDIRS)
 
 #
 # targets
 #
-all     :
+all:
 	@cd lib  && make release && cd ..
 	@cd src  && make release && cd ..
 	@cd test && make debug   && cd ..
@@ -17,7 +17,6 @@ debug   : build
 release : build
 build   : deps_check $(_SUBDIRS)
 clean   : $(_SUBDIRS)
-depend  : deps_check $(_SUBDIRS)
 temp    : $(_SUBDIRS)
 
 deps_check:
