foo,bar,baz > myliba,mylibc,mylibc

--- a/makefile/advance/lib/makefile
+++ b/makefile/advance/lib/makefile
@@ -2,8 +2,18 @@
 # lib/makefile
 # ------------------------------------------------------------------------------
 
-all:
+_SUBPROJS = foo foo/bar foo/bar/baz
+.PHONY: all debug release build clean temp $(_SUBPROJS)
+
+all: foo foo/bar foo/bar/baz
 	@echo "lib all"
-	
-$(MAKECMDGOALS):
-	@echo "lib "$(MAKECMDGOALS)
+
+all    : release
+debug  : build
+release: build
+build  : $(_SUBPROJS)
+clean  : $(_SUBPROJS)
+temp   : $(_SUBPROJS)
+
+$(_SUBPROJS):
+	cd foo/bar/baz && make $(MAKECMDGOALS) && cd../../..
