--- a/makefile/advance/lib/myliba/mylibb/makefile
+++ b/makefile/advance/lib/myliba/mylibb/makefile
@@ -2,7 +2,7 @@
 # lib/myliba/mylibb/makefile
 # ------------------------------------------------------------------------------
 
-.PHONY: all temp clean
+.PHONY: all debug release build clean temp
 
 include mylibc/mylibc.mk
 
@@ -10,23 +10,28 @@ _SRCS = $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
 _LIB  = lib$(shell basename $(PWD)).a
 
-all: $(_LIB)
+all: release
+debug: build
+release: build
+build: $(_LIB)
 
-temp:
-	@echo "lib/myliba/mylibb temp"
+$(_OBJS): $(MAKEFILE_LIST)
+
+$(_LIB): $(_OBJS) $(MAKEFILE_LIST)
+	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
 
 clean:
 	rm -f ./.depend
 	rm -rf $(_OBJS)
 	rm -rf $(_LIB)
 
+temp:
+	@echo "lib/myliba/mylibb temp"
+
+depend: .depend
+
 .depend: $(_SRCS)
 	@rm -f ./.depend
 	@$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
 
 include .depend
-
-$(_OBJS): $(MAKEFILE_LIST)
-
-$(_LIB): $(_OBJS) $(MAKEFILE_LIST)
-	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
