--- a/makefile/advance/lib/myliba/mylibb/mylibc/makefile
+++ b/makefile/advance/lib/myliba/mylibb/mylibc/makefile
@@ -2,31 +2,34 @@
 # lib/myliba/mylibb/mylibc/makefile
 # ------------------------------------------------------------------------------
 
-.PHONY: all temp clean
+.PHONY: all debug release build clean temp depend
 
 _SRCS = $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
 _LIB  = lib$(shell basename $(PWD)).a
 
-all: $(_LIB)
+all: release
+debug: build
+release: build
+build: $(_LIB)
 
-temp:
-	@echo "lib/myliba/mylibb/mylibc temp"
+$(_OBJS): $(MAKEFILE_LIST)
+
+$(_LIB): $(_OBJS) $(MAKEFILE_LIST)
+	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
 
 clean:
 	rm -f ./.depend
 	rm -rf $(_OBJS)
 	rm -rf $(_LIB)
 
+temp:
+	@echo "lib/myliba/mylibb/mylibc temp"
+
 depend: .depend
 
 .depend: $(_SRCS)
-	@rm -f ./.depend
-	@$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
+	rm -f ./.depend
+	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
 
 include .depend
-
-$(_OBJS): $(MAKEFILE_LIST)
-
-$(_LIB): $(_OBJS) $(MAKEFILE_LIST)
-	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
