--- a/makefile/test/dependency/makefile
+++ b/makefile/test/dependency/makefile
@@ -1,23 +1,23 @@
-SOURCES = $(wildcard *.cpp) $(wildcard *.c)
-OBJECTS = $(addsuffix .o,$(basename $(SOURCES)))
-TARGET  = $(shell basename $(PWD))
+_SRCS = $(wildcard *.cpp) $(wildcard *.c)
+_OBJS = $(addsuffix .o,$(basename $(_SRCS)))
+_EXEC  = $(shell basename $(PWD))
  
 first: all
 
-all: $(TARGET)
+all: $(_EXEC)
  
-$(TARGET): $(OBJECTS)
-	$(LINK.cc) -o $@ $(OBJECTS) $(LOADLIBES) $(LDLIBS)
-
-depend: .depend
-
-.depend: $(SOURCES)
-		rm -f ./.depend
-		$(CC) $(CFLAGS) -MM $^ > ./.depend;
-
-include .depend
+$(_EXEC): $(_OBJS)
+	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
 
 clean:
 	rm -rf .depend
-	rm -rf $(OBJECTS)
-	rm -rf $(TARGET)
+	rm -rf $(_OBJS)
+	rm -rf $(_EXEC)
+
+depend: .depend
+
+.depend: $(_SRCS)
+	rm -f ./.depend
+	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
+
+include .depend
