--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -12,36 +12,36 @@ _SRCS = $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
 _EXEC = ../bin/hello_world
 
-#
-# targets
-#
+CPPFLAGS += -Wall -g
+
 all: release
 
-debug: CXXFLAGS := -g -O0 -D_DEBUG $(CXXFLAGS)
+debug: CPPFLAGS := -D_DEBUG $(CPPFLAGS)
 debug: build
 
-release: CXXFLAGS := -g -O2 -D_RELEASE -DNDEBUG $(CXXFLAGS)
+release: CPPFLAGS := -D_RELEASE -DNDEBUG $(CPPFLAGS)
 release: build
 	
 build: $(_EXEC)
 
-temp:
-	@echo "_ABS_PATH  ="$(_ABS_PATH)
-	@echo "_REL_PATH  ="$(_REL_PATH)
-	@echo "MYLIBC_PATH="$(MYLIBC_PATH)
+
+$(_OBJS): $(MAKEFILE_LIST)
+
+$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
+	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
 
 clean:
 	rm -f ./.depend
 	rm -rf $(_OBJS)
 	rm -rf $(_EXEC)
 
+temp:
+	@echo "_ABS_PATH  ="$(_ABS_PATH)
+	@echo "_REL_PATH  ="$(_REL_PATH)
+	@echo "MYLIBC_PATH="$(MYLIBC_PATH)
+
 .depend: $(_SRCS)
-	@rm -f ./.depend
-	@$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
+	rm -f ./.depend
+	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
 
 include .depend
-
-$(_OBJS): $(MAKEFILE_LIST)
-
-$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
-	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
