--- a/makefile/simple/makefile
+++ b/makefile/simple/makefile
@@ -1,10 +1,12 @@
 .PHONY: all debug release build clean temp depend
 
-_SRCS = $(wildcard *.cpp)
+_SRCS = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
 _EXEC = $(shell basename $(PWD))
 
-CPPFLAGS += -g
+CPPFLAGS += -Wall -g
+
+LDLIBS += -lpthread
 
 all: release
 
@@ -20,18 +22,18 @@ $(_OBJS): $(MAKEFILE_LIST)
 
 $(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
 	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
-
+	
 clean:
+	rm -rf ./.depend
 	rm -rf $(_OBJS)
 	rm -rf $(_EXEC)
 
 temp:
 	@echo "MAKEFILE_LIST="$(MAKEFILE_LIST)
-	@echo "CPPFLAGS="$(CPPFLAGS)
 
 depend: .depend
 
-.depend: $(_SRCS)
+.depend: $(MAKEFILE_LIST)
 	rm -f ./.depend
 	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
 
