--- a/makefile/test/dependency/makefile
+++ b/makefile/test/dependency/makefile
@@ -1,21 +1,39 @@
 .PHONY: all debug release build clean temp depend
 
-_SRCS = $(wildcard *.cpp) $(wildcard *.c)
+_SRCS = $(wildcard *.c) $(wildcard *.cc) $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
-_EXEC  = $(shell basename $(PWD))
- 
-all: $(_EXEC)
- 
-$(_EXEC): $(_OBJS)
+_EXEC = $(shell basename $(PWD))
+
+CPPFLAGS += -Wall -g
+
+LDLIBS += -lpthread
+
+all: release
+
+debug: CPPFLAGS += -O0
+debug: build
+
+release: CPPFLAGS += -O2
+release: build
+
+build: $(_EXEC)
+
+$(_OBJS): $(MAKEFILE_LIST)
+
+$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
 	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
 
 clean:
+	rm -rf ./.depend
 	rm -rf $(_OBJS)
 	rm -rf $(_EXEC)
 
+temp:
+	@echo "MAKEFILE_LIST="$(MAKEFILE_LIST)
+
 depend: .depend
 
-.depend:
+.depend: $(MAKEFILE_LIST)
 	rm -f ./.depend
 	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
 
