--- a/makefile/advance/src/makefile
+++ b/makefile/advance/src/makefile
@@ -10,6 +10,7 @@ include ../lib/myliba/myliba.mk
 
 _SRCS = $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
+_DEPS = $(_OBJS:%.o=%.d)
 _EXEC = ../bin/hello_world
 
 CPPFLAGS += -Wall -g
@@ -26,13 +27,9 @@ release: build
 	
 build: $(_EXEC)
 
-$(_OBJS): $(MAKEFILE_LIST)
-
-$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
-	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
-
 clean:
 	rm -rf $(_OBJS)
+	rm -rf $(_DEPS)
 	rm -rf $(_EXEC)
 
 temp:
@@ -40,10 +37,23 @@ temp:
 	@echo "_REL_PATH  ="$(_REL_PATH)
 	@echo "MYLIBC_PATH="$(MYLIBC_PATH)
 
-.depend: .depend
+depend: $(_DEPS) $(MAKEFILE_LIST)
 
-.depend: $(_SRCS)
-	rm -f ./.depend
-	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
+$(_OBJS): $(MAKEFILE_LIST)
 
-include .depend
+$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
+	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
+
+%.d: %.c
+	$(COMPILE.c) -MM $< > $@
+	
+%.d: %.cc
+	$(COMPILE.cc) -MM $< > $@
+
+%.d: %.cpp
+	$(COMPILE.cc) -MM $< > $@
+
+_NODEPS=clean temp depend
+ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
+	-include $(_DEPS)
+endif
