--- a/makefile/advance/test/makefile
+++ b/makefile/advance/test/makefile
@@ -5,27 +5,61 @@
 _SUB_PROJS := test1 test2
 .PHONY: all debug release build clean temp depend $(_SUB_PROJS)
 
-_SRCS = $(shell find $(TARGET) -name "*.cpp")
+_SRCS = $(wildcard */*.c) $(wildcard */*.cc) $(wildcard */*.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
-_EXEC = ../bin/$(TARGET)
+_DEPS = $(_OBJS:%.o=%.d)
+_EXEC = $(addprefix ../bin/,$(_SUB_PROJS))
+
+CPPFLAGS += -Wall -g
+LDLIBS += -lpthread
 
 all: debug
+
 debug: CPPFLAGS += -O0
 debug: build
+
 release: CPPFLAGS += -O2
 release: build
-build: $(_EXEC)
-clean:
-	find -name "*.o" -type f -exec rm '{}' \;
-	rm ../bin/*
-	
-$(TARGET): $(_EXEC)
-	@#echo "_SUB_PROJS="$(_SUB_PROJS)
-	@echo "_SRCS     ="$(_SRCS)
-	@echo "_OBJS     ="$(_OBJS)
-	@echo "_EXEC     ="$(_EXEC)
-	
-depend:
 
-$(_EXEC): $(_OBJS)
-	$(LINK.cc) -o $@ $(_OBJS) $(LOADLIBES) $(LDLIBS)
+build: $(_SUB_PROJS)
+
+clean:
+	rm -rf $(_DEPS)
+	rm -rf $(_OBJS)
+	rm -rf $(_EXEC)
+	
+temp:
+	@echo "_SRCS="$(_SRCS)
+	@echo "_OBJS="$(_OBJS)
+	@echo "_DEPS="$(_DEPS)
+	@echo "_SUB_PROJS="$(_SUB_PROJS)
+	@echo "_EXEC="$(_EXEC)
+
+depend: $(_DEPS) $(MAKEFILE_LIST)
+
+$(_OBJS): $(MAKEFILE_LIST)
+
+$(_EXEC): $(_OBJS) $(MAKEFILE_LIST)
+	$(LINK.cc) -o ../bin/$@ $(shell ls $(addsuffix /*.o,$(notdir $@))) $(LOADLIBES) $(LDLIBS)
+
+$(_SUB_PROJS): $(_EXEC)
+
+#$(_SUB_PROJS): $(_OBJS) $(MAKEFILE_LIST)
+#	@#echo "_SUB_OBJS="$(shell ls $(basename $@)/*.o)
+#	@echo "______"$@
+#	@#echo "_SUB_OBJS="$(shell ls $(basename $@)/*.o)
+#	$(LINK.cc) -o ../bin/$@ $(shell ls $@/*.o) $(LOADLIBES) $(LDLIBS)
+
+%.d: %.c
+	$(COMPILE.c) -MM $< > $@
+	
+%.d: %.cc
+	$(COMPILE.cc) -MM $< > $@
+
+%.d: %.cpp
+	$(COMPILE.cc) -MM $< > $@
+
+_NODEPS=clean temp depend
+ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
+	include $(_DEPS)
+endif
