--- a/makefile/advance/lib/myliba/mylibb/mylibc/makefile
+++ b/makefile/advance/lib/myliba/mylibb/mylibc/makefile
@@ -4,35 +4,53 @@
 
 .PHONY: all debug release build clean temp depend
 
+
+
+
+
 _SRCS = $(wildcard *.cpp)
 _OBJS = $(addsuffix .o,$(basename $(_SRCS)))
+_DEPS = $(_OBJS:%.o=%.d)
 _LIB  = lib$(shell basename $(PWD)).a
 
-CPPFLAGS += -Wall
+CPPFLAGS += -Wall -g
+LDLIBS += -lpthread
 
 all: release
+
 debug: CPPFLAGS += -O0
 debug: build
+
 release: CPPFLAGS += -O2
 release: build
+
 build: $(_LIB)
+
+clean:
+	rm -rf $(_OBJS)
+	rm -rf $(_DEPS)	
+	rm -rf $(_LIB)
+
+temp:
+	@echo "lib/myliba/mylibb/mylibc temp"
+
+depend: $(_DEPS) $(MAKEFILE_LIST)
 
 $(_OBJS): $(MAKEFILE_LIST)
 
 $(_LIB): $(_OBJS) $(MAKEFILE_LIST)
 	$(AR) $(ARFLAGS) -o $@ $(_OBJS)
 
-clean:
-	rm -rf $(_OBJS)
-	rm -rf $(_LIB)
+%.d: %.c
+	$(COMPILE.c) -MM $< > $@
+	
+%.d: %.cc
+	$(COMPILE.cc) -MM $< > $@
 
-temp:
-	@echo "lib/myliba/mylibb/mylibc temp"
+%.d: %.cpp
+	$(COMPILE.cc) -MM $< > $@
 
-depend: .depend
-
-.depend: $(_SRCS)
-	rm -f ./.depend
-	$(CXX) $(CPPFLAGS) -MM $(_SRCS) > ./.depend
-
-include .depend
+_NODEPS=clean temp depend
+ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(_NODEPS))))
+	-include $(_DEPS)
+endif
